@@ -1,16 +1,16 @@
 Begin3
 Title:          KAppTemplate
-Version:        0.6.3
-Entered-date:   09Jun00
-Description:    Shell script that will automatically create a KTMainWindow-
-                based KDE 2.0 app framework with user input.
-Keywords:       KDE application generator 2.0
+Version:        0.7
+Entered-date:   21Jul00
+Description:    Shell script that will automatically create a full-featured
+                KTMainWindow- based KDE 2.0 app framework with user input.
+Keywords:       KDE application generator DCOP KParts XML-GUI
 Author:         Kurt Granroth <granroth@kde.org>
 Maintained-by:  Kurt Granroth <granroth@kde.org>
 Home-page:      http://www.pobox.com/~kurt_granroth/kapptemplate
 Primary-site:   cvs.kde.org:/home/kde/kdesdk/kapptemplate
-                xxxxxx  kapptemplate-0.6.3.tar.gz
-                xxx     kapptemplate-0.6.3.lsm
+                xxxxxx  kapptemplate-0.7.tar.gz
+                xxx     kapptemplate-0.7.lsm
 Platform:       Unix
 Copying-policy: GPL
 End
