@@ -1,6 +1,6 @@
 #!/bin/sh
 
-$ECHO "KAppTemplate v0.6.3 (C) 2000 Kurt Granroth <granroth@kde.org>";
+$ECHO "KAppTemplate v0.7 (C) 2000 Kurt Granroth <granroth@kde.org>";
 $ECHO;
 
 # STEP 1: INITIALIZATION is done in the main module
